# KalshiBot

./: .env.example  .gitignore  BUILD_COMPLETE.md  CHECKLIST.md  FINDING_MARKETS.md  ODDS_API_SETUP.md  OVERVIEW.md  QUICKSTART.md  README.md  analyzer.py  config.py  kalshi_client.py  main.py  mappings.example.yaml  mappings.yaml  news_fetcher.py  pyproject.toml  requirements.txt
.github/workflows/: daily_run.yml
scripts/: pre-commit.no-keys
src/kalshi_bot/: __init__.py  __main__.py  cli.py  config.py
src/kalshi_bot/client/: __init__.py  base.py  kalshi.py  mock.py
src/kalshi_bot/core/: __init__.py  backtest.py  discovery.py  orders.py  risk.py  snapshotter.py
src/kalshi_bot/db/: __init__.py  repository.py
src/kalshi_bot/models/: __init__.py  market.py  order.py  position.py  snapshot.py
src/kalshi_bot/observability/: __init__.py  alerts.py  logging.py  metrics.py
src/kalshi_bot/scheduler/: __init__.py  runner.py
src/kalshi_bot/strategies/: __init__.py  base.py  mean_reversion.py  mispricing.py
src/kalshi_odds/: __init__.py  __main__.py  cli.py  config.py  db.py
src/kalshi_odds/adapters/: __init__.py  kalshi.py  odds_api.py
src/kalshi_odds/core/: __init__.py  automapper.py  matcher.py  odds_math.py  scanner.py
src/kalshi_odds/models/: __init__.py  comparison.py  kalshi.py  odds.py  probability.py
tests/: __init__.py  conftest.py  test_discovery.py  test_integration.py  test_odds_math.py  test_orders.py  test_risk.py  test_scanner.py  test_strategies.py
