[project]
name = "kalshi-bot"
version = "0.1.0"
description = "Production trading bot for Kalshi prediction markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[project.scripts]
kalshi-bot = "kalshi_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_bot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
